--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<!-- 헤드에 들어갈 DOM을 가져옴 -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<!-- 바디에 들어갈 DOM을 가져옴 -->
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
