인트로 페이지 생성

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link
+			rel="icon"
+			href="%sveltekit.assets%/favicon.png"
+		/>
 		<meta name="viewport" content="width=device-width" />
 		<!-- 헤드에 들어갈 DOM을 가져옴 -->
 		%sveltekit.head%
